# funsor

./: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  example.py  funsor.py  params_10.pt  params_10_lr=0.03_n=100.pt  params_10_lr=0.05_n=100.pt  params_1_lr=0.05_n=100.pt  params_5.pt  sensor.ipynb  sensor.pkl  sensor_filter.ipynb  setup.cfg  setup.py  test.py
docs/: Makefile  make.bat  requirements.txt
examples/: README.rst  adam.py  analytic_kl.py  discrete_hmm.py  eeg_funsor_slds.py  eeg_slds.py  flow_translation.py  forward_backward.py  gpa.py  imm.py  kalman_filter.py  minipyro.py  neural_y.py  normal_filter.py  optim.py  pcfg.py  phylogeny.py  rsa.py  rv_dmm.py  rv_ssm.py  sat.py  sensor.py  simple_smc.py  slds.py  smc_ssm.py  ss_vae_delayed.py  talbot.py  vae.py
funsor/: __init__.py  adam.py  adjoint.py  affine.py  approximations.py  autodiff.py  cnf.py  compiler.py  constant.py  contract.py  core.py  delta.py  distribution.py  distributions.py  distributions2.py  domains.py  einsum.py  elbo.py  expectation.py  expectation_propagation.py  factory.py  fixpoints.py  gaussian.py  handlers.py  importance.py  instrument.py  integrate.py  interpretations.py  interpreter.py  inverse_laplace.py  invert.py  jax.py  jensen.py  joint.py  jvp.py  linearize.py  memoize.py  minipyro.py  momentmatching.py  montecarlo.py  (+27 more)
scripts/: update_headers.py
test/: conftest.py  test_adjoint.py  test_affine.py  test_alpha_conversion.py  test_approximations.py  test_autodiff.py  test_cnf.py  test_compiler.py  test_constant.py  test_contract.py  test_contracy.py  test_core.py  (+45 more)
(+94 files in other folders)
