[metadata]
# This includes the license file(s) in the wheel.
license_files = LICENSE.md

[flake8]
max-line-length = 120
exclude = docs/src, build, dist
ignore = F811,E121,E123,E126,E226,E24,E704,W503,W504,E203
per-file-ignores =
    test/examples/test_sensor_fusion.py:E128
    funsor/ops/__init__.py:F401,F403
    funsor/jax/distributions.py:F821
    funsor/torch/distributions.py:F821
    test/conftest.py:E402

[isort]
profile = black
known_first_party = funsor, test
known_third_party = opt_einsum, pyro, pyroapi, torch, torchvision

[tool:pytest]
filterwarnings = error
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.dtype size changed:RuntimeWarning
    ignore:Mixed memory format:UserWarning
    ignore:Cannot memoize Op:UserWarning
    ignore::DeprecationWarning
    ignore:CUDA initialization:UserWarning
    ignore:floor_divide is deprecated:UserWarning
    ignore:__floordiv__ is deprecated:UserWarning
    ignore:__rfloordiv__ is deprecated:UserWarning
    ignore:torch.cholesky is deprecated:UserWarning
    ignore:torch.symeig is deprecated:UserWarning
    once::DeprecationWarning

doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
